@@ -139,7 +139,7 @@ The porg distribution provides the following auxiliary scripts:
 <ul><li>
 	<b>paco2porg</b>
 	<br/><br/>
-	A small shell script that imports paco logs into the porg database.
+	A shell script that imports paco logs into the porg database.
 	<br/><br/>
 </li><li>
 	<b>porgball</b>
